tests/errors/runtime/001.run
tests/errors/runtime/001.ura:6: division by zero
exit: 1
